[stable/mongodb-replicaset] Add various enhancements
* Update helper templates to latest ones from chartutil
* Allow flexible affinity configuration
* Add tolerations
* Fix readme

--- a/stable/mongodb-replicaset/templates/mongodb-configmap.yaml
+++ b/stable/mongodb-replicaset/templates/mongodb-configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   labels:
     app: {{ template "mongodb-replicaset.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    chart: {{ template "mongodb-replicaset.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "mongodb-replicaset.fullname" . }}
