--- a/stable/mongodb-replicaset/Chart.yaml
+++ b/stable/mongodb-replicaset/Chart.yaml
@@ -1,11 +1,14 @@
 name: mongodb-replicaset
 home: https://github.com/mongodb/mongo
-version: 2.1.5
+version: 2.2.0
+appVersion: 3.4
 description: NoSQL document-oriented database that stores JSON-like documents with
   dynamic schemas, simplifying the integration of data in content-driven applications.
 icon: https://webassets.mongodb.com/_com_assets/cms/mongodb-logo-rgb-j6w271g1xn.jpg
 sources:
-- https://github.com/mongodb/mongo
+  - https://github.com/mongodb/mongo
 maintainers:
-- name: Anirudh Ramanathan
-  email: ramanathana@google.com
+  - name: foxish
+    email: ramanathana@google.com
+  - name: unguiculus
+    email: unguiculus@gmail.com
