--- a/stable/mongodb-replicaset/templates/mongodb-ca.yaml
+++ b/stable/mongodb-replicaset/templates/mongodb-ca.yaml
@@ -5,7 +5,7 @@ type: kubernetes.io/tls
 metadata:
   labels:
     app: {{ template "mongodb-replicaset.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    chart: {{ template "mongodb-replicaset.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
   name: {{ template "mongodb-replicaset.fullname" . }}-ca
