--- a/stable/mongodb-replicaset/values.yaml
+++ b/stable/mongodb-replicaset/values.yaml
@@ -25,8 +25,6 @@ image:
 # Annotations to be added to MongoDB pods
 podAnnotations: {}
 
-podAntiAffinity: "soft"
-
 resources: {}
 # limits:
 #   cpu: 500m
@@ -38,6 +36,10 @@ resources: {}
 ## Node selector
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
 nodeSelector: {}
+
+affinity: {}
+
+tolerations: []
 
 persistentVolume:
   enabled: true
