Add missing documentation for values introduced in this and previous PRs
Also fix encryption key values key in secrets, and rename credentialManager.vault.caCert to credentialManager.vault.useCaCert for clarity

--- a/stable/concourse/templates/secrets.yaml
+++ b/stable/concourse/templates/secrets.yaml
@@ -19,8 +19,8 @@ data:
   postgresql-uri: {{ .Values.secrets.postgresql.uri | b64enc | quote }}
   {{ end }}
   {{- if .Values.concourse.encryption.enabled }}
-  encryption-key: {{ default "" .Values.secrets.concourse.encryptionKey | b64enc | quote }}
-  old-encryption-key: {{ default "" .Values.secrets.concourse.oldEncryptionKey | b64enc | quote }}
+  encryption-key: {{ default "" .Values.secrets.concourse.encryption.key | b64enc | quote }}
+  old-encryption-key: {{ default "" .Values.secrets.concourse.encryption.oldKey | b64enc | quote }}
   {{- end }}
   {{- if .Values.concourse.basicAuth.enabled }}
   basic-auth-username: {{ .Values.secrets.concourse.basicAuth.username | b64enc | quote }}
