fix: as per code review, remove keys

--- a/incubator/ethereum/templates/geth.configmap.yaml
+++ b/incubator/ethereum/templates/geth.configmap.yaml
@@ -21,8 +21,10 @@ data:
         "difficulty":  {{ .Values.geth.genesis.difficulty | quote }},
         "gasLimit": {{ .Values.geth.genesis.gasLimit | quote }},
         "alloc": {
+            {{- if .Values.geth.account.publicKey }}
             {{ .Values.geth.account.publicKey | quote }}: {
                 "balance": "1000000000000000000000000"
             }
+            {{- end }}
         }
     }
