--- a/incubator/ethereum/templates/geth-account.secret.yaml
+++ b/incubator/ethereum/templates/geth-account.secret.yaml
@@ -9,5 +9,9 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
+  {{- if .Values.geth.account.privateKey }}
   accountPrivateKey: {{ .Values.geth.account.privateKey | b64enc | quote }}
+  {{- end }}
+  {{- if .Values.geth.account.secret }}
   accountSecret: {{ .Values.geth.account.secret | b64enc | quote }}
+  {{- end }}
