Add Master.InitContainerEnv to allow sending env vars into init container

--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -15,6 +15,14 @@ Master:
   # AdminPassword: <defaults to random>
   Cpu: "200m"
   Memory: "256Mi"
+  # Environment variables that get added to the init container (useful for e.g. http_proxy)
+  # InitContainerEnv:
+  #   - name: http_proxy
+  #     value: "http://192.168.64.1:3128"
+  #   - name: https_proxy
+  #     value: "http://192.168.64.1:3128"
+  #   - name: no_proxy
+  #     value: ""
   # Set min/max heap here if needed with:
   # JavaOpts: "-Xms512m -Xmx512m"
   # JenkinsOpts: ""
