--- a/stable/mysql/templates/secrets.yaml
+++ b/stable/mysql/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if .Release.IsInstall }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -19,3 +20,4 @@ data:
   {{ else }}
   mysql-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
+{{ end }}
