--- a/stable/external-dns/templates/secret.yaml
+++ b/stable/external-dns/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if or (and .Values.aws.secretKey .Values.aws.accessKey) .Values.cloudflare.apiKey .Values.extraEnv -}}
+{{- if or (and .Values.aws.secretKey .Values.aws.accessKey) .Values.cloudflare.apiKey .Values.extraEnv .Values.google.applicationCredentials -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,6 +7,9 @@ metadata:
   name: {{ template "external-dns.fullname" . }}
 type: Opaque
 data:
+{{- if .Values.google.applicationCredentials }}
+  {{ template "external-dns.google.applicationCredentialPath" . }}: {{ .Values.google.applicationCredentials | quote }}
+{{- end }}
 {{- if and .Values.aws.secretKey .Values.aws.accessKey }}
   aws_access_key_id: {{ .Values.aws.accessKey | b64enc | quote }}
   aws_secret_access_key: {{ .Values.aws.secretKey | b64enc | quote }}
