Add Master.ContainerEnv for additional env vars for the Jenkins container

--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -19,6 +19,9 @@ Master:
   # InitContainerEnv:
   #   - name: http_proxy
   #     value: "http://192.168.64.1:3128"
+  # ContainerEnv:
+  #   - name: http_proxy
+  #     value: "http://192.168.64.1:3128"
   # Set min/max heap here if needed with:
   # JavaOpts: "-Xms512m -Xmx512m"
   # JenkinsOpts: ""
