[incubator/spring-cloud-data-flow] Update to new app version 1.3.0
- Add new spring-cloud-skipper component

- Add RBAC support

- Update requirements versions

--- a/incubator/spring-cloud-data-flow/templates/metrics-deployment-rabbit.yaml
+++ b/incubator/spring-cloud-data-flow/templates/metrics-deployment-rabbit.yaml
@@ -45,7 +45,7 @@ spec:
         - name: SPRING_RABBITMQ_HOST
           value: '${{ printf "{%s" .Release.Name | upper }}_RABBITMQ_SERVICE_HOST}'
         - name: SPRING_RABBITMQ_PORT
-          value: '${{ printf "{%s" .Release.Name | upper }}_RABBITMQ_SERVICE_PORT_AMPQ}'
+          value: '${{ printf "{%s" .Release.Name | upper }}_RABBITMQ_SERVICE_PORT_AMQP}'
         - name: SPRING_RABBITMQ_USERNAME
           value: '{{ .Values.rabbitmq.rabbitmqUsername }}'
         - name: SPRING_RABBITMQ_PASSWORD
@@ -53,3 +53,4 @@ spec:
             secretKeyRef:
               name: {{ printf "%s-%s" .Release.Name "rabbitmq" | trunc 63 | trimSuffix "-" }}
               key: rabbitmq-password
+      serviceAccountName: {{ template "fullname" . }}-sa
