--- a/incubator/spring-cloud-data-flow/values.yaml
+++ b/incubator/spring-cloud-data-flow/values.yaml
@@ -7,9 +7,12 @@ dataflowRoles: ROLE_VIEW, ROLE_CREATE
 dataflowAdminUsername: admin
 dataflowAdminPassword: admin
 dataflowAdminRoles: ROLE_MANAGE, ROLE_VIEW
+rbac:
+  create: false
+  apiVersion: v1beta1
 server:
   image: springcloud/spring-cloud-dataflow-server-kubernetes
-  version: 1.2.2.RELEASE
+  version: 1.3.0.RELEASE
   imagePullPolicy: IfNotPresent
   service:
     type: LoadBalancer
@@ -19,6 +22,22 @@ server:
   #  limits:
   #    cpu: 1.0
   #    memory: 2048Mi
+  #  requests:
+  #    cpu: 0.5
+  #    memory: 640Mi
+skipper:
+  image: springcloud/spring-cloud-skipper-server
+  version: 1.0.0.RELEASE
+  imagePullPolicy: IfNotPresent
+  platformName: minikube
+  service:
+    type: ClusterIP
+    externalPort: 80
+    internalPort: 7577
+  resources: {}
+  #  limits:
+  #    cpu: 1.0
+  #    memory: 1024Mi
   #  requests:
   #    cpu: 0.5
   #    memory: 640Mi
@@ -38,6 +57,9 @@ metrics:
   #    cpu: 0.5
   #    memory: 640Mi
 deployer:
+  resourceLimits:
+    cpu: 500m
+    memory: 1024Mi
   readinessProbe:
     initialDelaySeconds: 120
   livenessProbe:
