ensure service account names match if creating rbac

--- a/stable/etcd-operator/templates/backup-operator-clusterrole-binding.yaml
+++ b/stable/etcd-operator/templates/backup-operator-clusterrole-binding.yaml
@@ -11,7 +11,11 @@ metadata:
     release: {{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
+{{- if .Values.rbac.backupOperatorServiceAccountName }}
   name: {{ .Values.rbac.backupOperatorServiceAccountName }}
+{{- else }}
+  name: {{ template "etcd-backup-operator.fullname" . }}
+{{- end }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
