--- a/stable/etcd-operator/templates/backup-operator-service-account.yaml
+++ b/stable/etcd-operator/templates/backup-operator-service-account.yaml
@@ -3,7 +3,11 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+{{- if .Values.rbac.backupOperatorServiceAccountName }}
+  name: {{ .Values.rbac.backupOperatorServiceAccountName }}
+{{- else }}
   name: {{ template "etcd-backup-operator.fullname" . }}
+{{- end }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: {{ template "etcd-backup-operator.name" . }}
