--- a/stable/etcd-operator/templates/operator-deployment.yaml
+++ b/stable/etcd-operator/templates/operator-deployment.yaml
@@ -18,7 +18,11 @@ spec:
         app: {{ template "etcd-operator.fullname" . }}
         release: {{ .Release.Name }}
     spec:
-      serviceAccountName: {{ if .Values.rbac.create }}{{ template "etcd-operator.fullname" . }}{{ else }}{{ .Values.rbac.etcdOperatorServiceAccountName }}{{ end }}
+    {{- if .Values.rbac.etcdOperatorServiceAccountName }}
+      serviceAccountName: {{ .Values.rbac.etcdOperatorServiceAccountName }}
+    {{- else }}
+      serviceAccountName: {{ template "etcd-operator.fullname" . }}
+    {{- end }}
       containers:
       - name: {{ template "etcd-operator.fullname" . }}
         image: "{{ .Values.etcdOperator.image.repository }}:{{ .Values.etcdOperator.image.tag }}"
