--- a/stable/etcd-operator/templates/restore-operator-deployment.yaml
+++ b/stable/etcd-operator/templates/restore-operator-deployment.yaml
@@ -18,7 +18,11 @@ spec:
         app: {{ template "etcd-restore-operator.fullname" . }}
         release: {{ .Release.Name }}
     spec:
-      serviceAccountName: {{ if .Values.rbac.create }}{{ template "etcd-restore-operator.fullname" . }}{{ else }}{{ .Values.rbac.restoreOperatorServiceAccountName }}{{ end }}
+    {{- if .Values.rbac.restoreOperatorServiceAccountName }}
+      serviceAccountName: {{ .Values.rbac.restoreOperatorServiceAccountName }}
+    {{- else }}
+      serviceAccountName: {{ template "etcd-restore-operator.fullname" . }}
+    {{- end }}
       containers:
       - name: {{ .Values.restoreOperator.name }}
         image: "{{ .Values.restoreOperator.image.repository }}:{{ .Values.restoreOperator.image.tag }}"
