--- a/stable/etcd-operator/values.yaml
+++ b/stable/etcd-operator/values.yaml
@@ -6,9 +6,9 @@
 rbac:
   create: true
   apiVersion: v1beta1
-  etcdOperatorServiceAccountName: default
-  backupOperatorServiceAccountName: default
-  restoreOperatorServiceAccountName: default
+  etcdOperatorServiceAccountName: etcd-operator-sa
+  backupOperatorServiceAccountName: backup-operator-sa
+  restoreOperatorServiceAccountName: restore-operator-sa
 
 # Select what to deploy
 deployments:
