add option for additional arguments in the chartmuseum deployment

--- a/incubator/chartmuseum/templates/deployment.yaml
+++ b/incubator/chartmuseum/templates/deployment.yaml
@@ -48,6 +48,9 @@ spec:
 {{- if eq .Values.env.open.STORAGE "local" }}
         - --storage-local-rootdir=/storage
 {{- end }}
+        {{- if .Values.deployment.additionalArguments }}
+{{ toYaml .Values.deployment.additionalArguments | indent 8}}
+{{- end }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
         livenessProbe:
