Use a pre install hook instead of .Release.IsInstall which would delete the secret completely on helm upgrade

--- a/stable/mysql/templates/secrets.yaml
+++ b/stable/mysql/templates/secrets.yaml
@@ -1,4 +1,3 @@
-{{- if .Release.IsInstall }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,6 +7,9 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-delete-policy": hook-failed
 type: Opaque
 data:
   {{ if .Values.mysqlRootPassword }}
@@ -20,4 +22,3 @@ data:
   {{ else }}
   mysql-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ end }}
-{{ end }}
