--- a/stable/etcd-operator/templates/backup-operator-clusterrole-binding.yaml
+++ b/stable/etcd-operator/templates/backup-operator-clusterrole-binding.yaml
@@ -11,7 +11,7 @@ metadata:
     release: {{ .Release.Name }}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Values.rbac.backupOperatorServiceAccountName }}
+  name: {{ if .Values.rbac.create }}{{ template "etcd-backup-operator.fullname" . }}{{ else }}{{ .Values.rbac.backupOperatorServiceAccountName }}{{ end }}
   namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
