--- a/stable/etcd-operator/templates/backup-operator-service-account.yaml
+++ b/stable/etcd-operator/templates/backup-operator-service-account.yaml
@@ -1,10 +1,10 @@
-{{- if and .Values.rbac.create .Values.deployments.backupOperator }}
+{{- if and .Values.serviceAccount.backupOperatorServiceAccount.create .Values.deployments.backupOperator }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-{{- if .Values.rbac.backupOperatorServiceAccountName }}
-  name: {{ .Values.rbac.backupOperatorServiceAccountName }}
+{{- if .Values.serviceAccount.backupOperatorServiceAccount.name }}
+  name: {{ .Values.serviceAccount.backupOperatorServiceAccount.name }}
 {{- else }}
   name: {{ template "etcd-backup-operator.fullname" . }}
 {{- end }}
