--- a/stable/etcd-operator/templates/operator-service-account.yaml
+++ b/stable/etcd-operator/templates/operator-service-account.yaml
@@ -1,10 +1,10 @@
-{{- if and .Values.rbac.create .Values.deployments.etcdOperator }}
+{{- if and .Values.serviceAccount.etcdOperatorServiceAccount.create .Values.deployments.etcdOperator }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-{{- if .Values.rbac.etcdOperatorServiceAccountName }}
-  name: {{ .Values.rbac.etcdOperatorServiceAccountName }}
+{{- if .Values.serviceAccount.etcdOperatorServiceAccount.name }}
+  name: {{ .Values.serviceAccount.etcdOperatorServiceAccount.name }}
 {{- else }}
   name: {{ template "etcd-operator.fullname" . }}
 {{- end }}
