--- a/stable/etcd-operator/templates/restore-operator-service-account.yaml
+++ b/stable/etcd-operator/templates/restore-operator-service-account.yaml
@@ -1,10 +1,10 @@
-{{- if and .Values.rbac.create .Values.deployments.restoreOperator }}
+{{- if and .Values.serviceAccount.restoreOperatorServiceAccount.create .Values.deployments.restoreOperator }}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-{{- if .Values.rbac.restoreOperatorServiceAccountName }}
-  name: {{ .Values.rbac.restoreOperatorServiceAccountName }}
+{{- if .Values.serviceAccount.restoreOperatorServiceAccount.name }}
+  name: {{ .Values.serviceAccount.restoreOperatorServiceAccount.name }}
 {{- else }}
   name: {{ template "etcd-restore-operator.fullname" . }}
 {{- end }}
