Updating chart for RBAC best practices

--- a/incubator/spring-cloud-data-flow/templates/metrics-deployment-rabbit.yaml
+++ b/incubator/spring-cloud-data-flow/templates/metrics-deployment-rabbit.yaml
@@ -53,4 +53,4 @@ spec:
             secretKeyRef:
               name: {{ printf "%s-%s" .Release.Name "rabbitmq" | trunc 63 | trimSuffix "-" }}
               key: rabbitmq-password
-      serviceAccountName: {{ template "fullname" . }}-sa
+      serviceAccountName: {{ template "serviceAccountName" . }}
