--- a/incubator/spring-cloud-data-flow/templates/server-deployment.yaml
+++ b/incubator/spring-cloud-data-flow/templates/server-deployment.yaml
@@ -131,4 +131,4 @@ spec:
           }
         }
       ]
-      serviceAccountName: {{ template "fullname" . }}-sa
+      serviceAccountName: {{ template "serviceAccountName" . }}
