--- a/incubator/spring-cloud-data-flow/templates/service-account.yaml
+++ b/incubator/spring-cloud-data-flow/templates/service-account.yaml
@@ -1,5 +1,11 @@
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "fullname" . }}-sa
-  namespace: default
+  name: {{ template "serviceAccountName" . }}
+  labels:
+    app: {{ template "name" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+{{- end -}}
