--- a/incubator/unbound/templates/deployment.yaml
+++ b/incubator/unbound/templates/deployment.yaml
@@ -56,7 +56,7 @@ spec:
       - name: "healthz"
         image: {{ .Values.healthzImage | quote }}
         args:
-          - "-cmd=nslookup health.check.unbound 127.0.0.1 > /dev/null"
+          - "-cmd=nslookup -port={{ .Values.serverPort }} health.check.unbound 127.0.0.1 > /dev/null"
         ports:
         - name: healthz
           containerPort: 8080
