--- a/stable/unbound/values.yaml
+++ b/stable/unbound/values.yaml
@@ -8,6 +8,7 @@ healthzImagePullPolicy: "IfNotPresent"
 memRequest: "32Mi"
 memLimit: "64Mi"
 cpuRequest: "100m"
+cpuLimit: "1"
 verbosity: 1
 numThreads: 1
 statsInterval: 0
